--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.3-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
