--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "sortablejs": "^1.13.0",
+    "stimulus": "^2.0.0",
+    "stimulus_reflex": "3.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
