--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "autoprefixer": "^9",
+    "highlight.js": "^10.7.2",
     "postcss": "^7",
     "sortablejs": "^1.13.0",
     "stimulus": "^2.0.0",
